# organa

./: .gitignore  CMakeLists.txt  README.md
budget/: CMakeLists.txt
budget/src/: Budget.cpp  main.cpp
core/: CMakeLists.txt
core/src/: Config.cpp
docs/: PLAN.md  dev_readme.md
launcher/: CMakeLists.txt
launcher/src/: launcher.cpp
tasks/: CMakeLists.txt
tasks/src/: Task.cpp  main.cpp
tui/: CMakeLists.txt
tui/src/: TUI.cpp  main.cpp
